--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -61,7 +61,7 @@
         </div>
 
         {% block footer %}
-            <footer>
+            <footer class="footer">
                 <div class="container">
                     <div class="row">
                         <div id="footer-copyright" class="col-md-6">
